/*
 * $Id: ChangeLog,v 1.827 2003/03/11 19:16:08 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-12 01:30 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/garbage.c
  * source/vm/thread.c
  * include/thread.h
    ! Latest thread architecture has been ported on windows. 
      Now they are working, under almost all conditions. 
      Architecture is fine, still some optimization and compatibilty
      issue is to be addressed.

2003-03-11 11:09 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  + tests/assocspd.prg
    + Added sample comparing Array Syntax of AA, against OOP Syntax of AA, as well as normal Objects.

2003-03-10 22:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    * Minor correction to recent supoort for \=>.

  * tests/assocarr.prg
    * Typo in comment.

2003-03-11 00:17 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/rtl/console.c
  * source/vm/extend.c
  * source/vm/fm.c
  * source/vm/garbage.c
  * source/vm/hvm.c
  * source/vm/thread.c
    + New threading framework has been added. On Windows, suppor for
      "kind" cancellations and "single thread running" has been added.
      Also, pthread_key optimization is included in the model, and

  * source/rtl/hbserial.prg
  * source/rtl/trpc.prg

2003-03-19 02:50 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * include/thread.h
  * source/vm/thread.c
    % Simple Linux thread speed optimization using local thread data
      - it makes Linux MT programs 40% faster.
      Question to anyone familiar with Windows:
        Is similar mechanism (local thread data) available for that platform?

2003-03-09 14:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/tobject.prg
    + Added support for Method Keys to class TAssociativeArray.

  * tests/assocarr.prg